# dcs-dach-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly-live.toml  fly-test.toml  fly.toml
.github/workflows/: ci.yaml
src/: handler.rs  main.rs
src/commands/: debug.rs  mod.rs  ping.rs  poll.rs  poll_create.rs  poll_view.rs  rolepicker.rs
src/functions/: audit.rs  mod.rs  modmsg.rs  rolepicker.rs  update_users.rs
src/util/: consts.rs  facade.rs  mod.rs
