# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dcs-dach-bot"
version = "1.2.0"
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "builder", "client", "cache", "collector", "gateway", "rustls_backend", "model", "utils"
] }
