# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "dcs-dach-bot"
version = "1.3.0"
edition = "2021"
publish = false

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", default-features = false, features = [
    "builder", "client", "cache", "collector", "gateway", "rustls_backend", "model", "utils"
] }
